--- a/ReminDTETITB/app/src/main/AndroidManifest.xml
+++ b/ReminDTETITB/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.remindtetitb">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -20,6 +22,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.main.MainActivity"></activity>
+        <receiver
+            android:name=".alarm.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
