--- a/ReminDTETITB/app/src/main/AndroidManifest.xml
+++ b/ReminDTETITB/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.remindtetitb">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,15 +14,24 @@
         android:roundIcon="@drawable/logo_onboarding"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.detail.DetailActivity"></activity>
-        <activity android:name=".ui.onboarding.OnboardingActivity">
+        <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:name=".ui.detail.DetailActivity"></activity>
+        <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:name=".ui.onboarding.OnboardingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.MainActivity"></activity>
+        <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:name=".ui.main.MainActivity"></activity>
         <receiver
             android:name=".alarm.AlarmReceiver"
             android:enabled="true"
